Resolves #4: create API (getUsers, getUserById and getUserByEmail) to get the user's information
